examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/fix_from_arg.st
language core;

extend with #fixpoint-combinator;

fn main(f : fn(Nat) -> Bool) -> Nat {
  return fix(f);
}
//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
